--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
                 </p>
                 <p>
                     <b>どうする？</b><br>
-                    <a href="index.html">トップページに戻る</a><br>
+                    <a href="../index.html">トップページに戻る</a><br>
                     <a href="mailto:pureyurinan@gmail.com">ゆりかにメールで教えて！</a><br>
                     <a href="#">ラジ狐狸公式へ</a>
                 </p>
