--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a href="#corner">番組コーナー</a><br>
                     <a href="#mail">お便り募集</a><br>
                     <a href="#archive">過去の放送</a><br>
-                    <a href="http://www.geocities.co.jp/yurika_fanclub">ファンクラブ</a>
+                    <a href="./yurika_fanclub">ファンクラブ</a>
                 </p>
                 <img src="yurika_mascot.gif" alt="ゆりかマスコット" width="100" height="100">
                 <p><span class="blink">ただいま来場者数: 12345人！</span></p>
