--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>純情ゆりかの、最近なんか - 公式ホームページ</title>
+    <title>純情ゆりかの、なんか - 公式ホームページ</title>
     <meta charset="UTF-8">
     <style>
         body {
@@ -61,7 +61,7 @@
     <table border="1" cellpadding="10" cellspacing="0">
         <tr>
             <td colspan="2">
-                <h1>★純情ゆりかの、最近なんか★</h1>
+                <h1>★純情ゆりかの、なんか★</h1>
                 <img src="yurika_banner.gif" alt="ゆりかバナー" width="600" height="100">
                 <p><span class="blink">毎週日曜 深夜0時～放送！</span></p>
             </td>
@@ -83,7 +83,7 @@
             <td class="content">
                 <h2>番組について</h2>
                 <p>
-                    ようこそ！「純情ゆりかの、最近なんか」の公式ホームページへ！<br>
+                    ようこそ！「純情ゆりかの、なんか」の公式ホームページへ！<br>
                     毎週日曜の深夜、DJゆりかがリスナーのみなさんと一緒に<br>
                     最近の「なんか」をゆる～くトーク！<br>
                     恋愛相談から日常の小さな出来事まで、なんでも話せるラジオ番組です！
