--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 Not Found - 純情ゆりかの、最近なんか</title>
+    <title>404 Not Found - 純情ゆりかの、なんか</title>
     <meta charset="UTF-8">
     <style>
         body {
